--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@popperjs/core": "^2.11.5",
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29",
     "bootstrap": "^5.1.3",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
